--- a/Plantful/Plantful/Favorites/Plantful/Base.lproj/Favorites.storyboard
+++ b/Plantful/Plantful/Favorites/Plantful/Base.lproj/Favorites.storyboard
@@ -3,7 +3,6 @@
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -14,7 +13,7 @@
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="roX-sT-bWg">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.2499961342" green="0.4452520941" blue="0.27562342569999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="130" id="8DI-Zg-6S2">
                                 <rect key="frame" x="0.0" y="50" width="390" height="130"/>
@@ -48,6 +47,8 @@
                                             </constraints>
                                         </stackView>
                                     </subviews>
+                                    <color key="backgroundColor" red="0.37328322310000001" green="0.65963273200000005" blue="0.40928117089999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="tintColor" red="0.80179474709999998" green="0.80179474709999998" blue="0.80179474709999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstItem="khq-TL-y0Y" firstAttribute="leading" secondItem="fdC-JJ-QMy" secondAttribute="leadingMargin" constant="46.999999999999972" id="0kf-JM-7Iz"/>
                                         <constraint firstItem="khq-TL-y0Y" firstAttribute="centerX" secondItem="fdC-JJ-QMy" secondAttribute="centerX" id="ENT-8i-8w2"/>
@@ -70,8 +71,5 @@
     </scenes>
     <resources>
         <image name="rectangle.trailinghalf.inset.filled.arrow.trailing" catalog="system" width="128" height="93"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
