--- a/Plantful/Plantful/PictureCapture/Plantful/Base.lproj/PictureCapture.storyboard
+++ b/Plantful/Plantful/PictureCapture/Plantful/Base.lproj/PictureCapture.storyboard
@@ -4,115 +4,86 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--PictureCapture-->
         <scene sceneID="qTg-3m-iJp">
             <objects>
-                <viewController title="PictureCapture" id="fc2-lP-xh9" sceneMemberID="viewController">
+                <viewController title="PictureCapture" id="fc2-lP-xh9" customClass="PictureCaptureViewController" customModule="Plantful" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="YRQ-R3-cth">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eRl-17-FtX">
-                                <rect key="frame" x="53" y="566" width="69" height="69"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="photo.on.rectangle.angled" catalog="system">
-                                    <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="21"/>
-                                </buttonConfiguration>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8dQ-Eb-H95">
+                            <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="252" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8dQ-Eb-H95">
                                 <rect key="frame" x="29" y="47" width="77" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="tintColor" red="0.80179474709999998" green="0.80179474709999998" blue="0.80179474709999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Cancel"/>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qgj-kd-0BS">
-                                <rect key="frame" x="75" y="187" width="240" height="258"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Qgj-kd-0BS">
+                                <rect key="frame" x="5" y="132" width="380" height="362"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u14-Xw-sR6">
-                                <rect key="frame" x="155" y="640" width="80" height="80"/>
+                                <rect key="frame" x="155" y="650" width="80" height="80"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="80" id="C79-YQ-rTS"/>
                                     <constraint firstAttribute="height" constant="80" id="ehH-dQ-Pvc"/>
                                 </constraints>
+                                <color key="tintColor" red="0.80179474709999998" green="0.80179474709999998" blue="0.80179474709999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="camera.circle.fill" catalog="system">
                                     <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="42"/>
                                 </buttonConfiguration>
                                 <connections>
-                                    <segue destination="HYP-O7-swH" kind="custom" id="mr8-RX-gve"/>
+                                    <action selector="cameraButtonTapped:" destination="fc2-lP-xh9" eventType="touchUpInside" id="Z1Q-Ce-u3W"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eRl-17-FtX">
+                                <rect key="frame" x="53" y="606" width="69" height="39"/>
+                                <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="0.0"/>
+                                <color key="tintColor" red="0.80179474709999998" green="0.80179474709999998" blue="0.80179474709999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="photo.on.rectangle.angled" catalog="system">
+                                    <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="21"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="cameraRollButtonTapped:" destination="fc2-lP-xh9" eventType="touchUpInside" id="wJU-Q9-a0K"/>
                                 </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="7c7-2e-rLr"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.2499961342" green="0.4452520941" blue="0.27562342569999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="Qgj-kd-0BS" firstAttribute="top" secondItem="8dQ-Eb-H95" secondAttribute="bottom" constant="50" id="11G-jM-5W0"/>
+                            <constraint firstItem="7c7-2e-rLr" firstAttribute="trailing" secondItem="Qgj-kd-0BS" secondAttribute="trailing" constant="5" id="1Xg-us-w0d"/>
+                            <constraint firstItem="eRl-17-FtX" firstAttribute="top" secondItem="Qgj-kd-0BS" secondAttribute="bottom" constant="112" id="3Rq-Sy-Tj8"/>
+                            <constraint firstItem="eRl-17-FtX" firstAttribute="leading" secondItem="7c7-2e-rLr" secondAttribute="leading" constant="53" id="Aaa-Se-O8J"/>
+                            <constraint firstItem="8dQ-Eb-H95" firstAttribute="top" secondItem="7c7-2e-rLr" secondAttribute="top" id="CNz-2C-iF4"/>
                             <constraint firstItem="u14-Xw-sR6" firstAttribute="centerX" secondItem="7c7-2e-rLr" secondAttribute="centerX" id="Cie-JA-1Wl"/>
-                            <constraint firstItem="7c7-2e-rLr" firstAttribute="bottom" secondItem="u14-Xw-sR6" secondAttribute="bottom" constant="90" id="fwW-rW-FON"/>
+                            <constraint firstItem="7c7-2e-rLr" firstAttribute="bottom" secondItem="eRl-17-FtX" secondAttribute="bottom" constant="165" id="GCg-cv-0zZ"/>
+                            <constraint firstItem="7c7-2e-rLr" firstAttribute="trailing" secondItem="eRl-17-FtX" secondAttribute="trailing" constant="268" id="XPY-3z-VxR"/>
+                            <constraint firstItem="Qgj-kd-0BS" firstAttribute="leading" secondItem="7c7-2e-rLr" secondAttribute="leading" constant="5" id="Zm5-Rr-NgW"/>
+                            <constraint firstItem="7c7-2e-rLr" firstAttribute="bottom" secondItem="u14-Xw-sR6" secondAttribute="bottom" constant="80" id="fwW-rW-FON"/>
+                            <constraint firstItem="8dQ-Eb-H95" firstAttribute="leading" secondItem="7c7-2e-rLr" secondAttribute="leading" constant="29" id="xcn-rc-M7z"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="BE7-Ou-cxk"/>
                     <navigationItem key="navigationItem" id="fGj-wv-Hub"/>
+                    <connections>
+                        <outlet property="cameraButton" destination="u14-Xw-sR6" id="b3H-Cx-L6m"/>
+                        <outlet property="cameraRollButton" destination="eRl-17-FtX" id="EUK-me-j6M"/>
+                        <outlet property="cancelButton" destination="8dQ-Eb-H95" id="G9y-Rx-yO1"/>
+                        <outlet property="capturedImage" destination="Qgj-kd-0BS" id="YD1-TK-77K"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uuD-Sm-sau" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="190.76923076923077" y="466.35071090047393"/>
         </scene>
-        <!--Camera-->
-        <scene sceneID="n8g-sG-v4d">
-            <objects>
-                <viewController title="Camera" id="HYP-O7-swH" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="JDj-sE-dZI">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rcb-JV-U12">
-                                <rect key="frame" x="301" y="47" width="53" height="42"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="bolt" catalog="system">
-                                    <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="23"/>
-                                </buttonConfiguration>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H6C-KD-KAC">
-                                <rect key="frame" x="37" y="46" width="58" height="42"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="xmark.app" catalog="system">
-                                    <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="23"/>
-                                </buttonConfiguration>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g8R-9B-d2W">
-                                <rect key="frame" x="171" y="660" width="50" height="64"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="circle.grid.hex.fill" catalog="system">
-                                    <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="36"/>
-                                </buttonConfiguration>
-                            </button>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="xSH-Fb-USt"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="pGL-D9-49a" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1073.8461538461538" y="465.63981042654024"/>
-        </scene>
     </scenes>
     <resources>
-        <image name="bolt" catalog="system" width="100" height="128"/>
         <image name="camera.circle.fill" catalog="system" width="128" height="123"/>
-        <image name="circle.grid.hex.fill" catalog="system" width="128" height="115"/>
         <image name="photo.on.rectangle.angled" catalog="system" width="128" height="98"/>
-        <image name="xmark.app" catalog="system" width="128" height="114"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
