--- a/Plantful/Plantful/Home/Home.storyboard
+++ b/Plantful/Plantful/Home/Home.storyboard
@@ -245,7 +245,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Jby-2D-ugZ">
+                                        <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="3" translatesAutoresizingMaskIntoConstraints="NO" id="Jby-2D-ugZ">
                                             <rect key="frame" x="8" y="8" width="120" height="112"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         </imageView>
@@ -265,6 +265,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="3" width="128" height="128"/>
         <image name="heart" catalog="system" width="128" height="107"/>
         <image name="rectangle.trailinghalf.inset.filled.arrow.trailing" catalog="system" width="128" height="93"/>
         <systemColor name="labelColor">
