--- a/Plantful/Plantful/PictureCapture/Plantful/Base.lproj/PictureCapture.storyboard
+++ b/Plantful/Plantful/PictureCapture/Plantful/Base.lproj/PictureCapture.storyboard
@@ -16,16 +16,22 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="252" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8dQ-Eb-H95">
-                                <rect key="frame" x="29" y="47" width="77" height="35"/>
+                                <rect key="frame" x="29.000000000000007" y="47" width="76.666666666666686" height="35"/>
                                 <color key="tintColor" red="0.80179474709999998" green="0.80179474709999998" blue="0.80179474709999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Cancel"/>
+                                <connections>
+                                    <action selector="cancelButtonTapped:" destination="fc2-lP-xh9" eventType="touchUpInside" id="wuG-DJ-b8q"/>
+                                </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Qgj-kd-0BS">
                                 <rect key="frame" x="5" y="132" width="380" height="362"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="362" id="Oyx-Uu-uU0"/>
+                                </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u14-Xw-sR6">
-                                <rect key="frame" x="155" y="650" width="80" height="80"/>
+                                <rect key="frame" x="155" y="690" width="80" height="80"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="80" id="C79-YQ-rTS"/>
                                     <constraint firstAttribute="height" constant="80" id="ehH-dQ-Pvc"/>
@@ -39,32 +45,48 @@
                                     <action selector="cameraButtonTapped:" destination="fc2-lP-xh9" eventType="touchUpInside" id="Z1Q-Ce-u3W"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eRl-17-FtX">
-                                <rect key="frame" x="53" y="606" width="69" height="39"/>
-                                <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="0.0"/>
-                                <color key="tintColor" red="0.80179474709999998" green="0.80179474709999998" blue="0.80179474709999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="photo.on.rectangle.angled" catalog="system">
-                                    <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="21"/>
-                                </buttonConfiguration>
-                                <connections>
-                                    <action selector="cameraRollButtonTapped:" destination="fc2-lP-xh9" eventType="touchUpInside" id="wJU-Q9-a0K"/>
-                                </connections>
-                            </button>
+                            <stackView opaque="NO" contentMode="scaleAspectFill" distribution="fillEqually" spacing="142" translatesAutoresizingMaskIntoConstraints="NO" id="gy4-LB-vL6">
+                                <rect key="frame" x="55" y="606" width="280" height="41.666666666666629"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eRl-17-FtX">
+                                        <rect key="frame" x="0.0" y="0.0" width="69" height="41.666666666666664"/>
+                                        <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="0.0"/>
+                                        <color key="tintColor" red="0.80179474709999998" green="0.80179474709999998" blue="0.80179474709999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="photo.on.rectangle.angled" catalog="system">
+                                            <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="21"/>
+                                        </buttonConfiguration>
+                                        <connections>
+                                            <action selector="cameraRollButtonTapped:" destination="fc2-lP-xh9" eventType="touchUpInside" id="wJU-Q9-a0K"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xOu-hI-vAz">
+                                        <rect key="frame" x="211" y="0.0" width="69" height="41.666666666666664"/>
+                                        <color key="tintColor" red="0.80179474709999998" green="0.80179474709999998" blue="0.80179474709999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="tray.and.arrow.down.fill" catalog="system">
+                                            <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="23"/>
+                                        </buttonConfiguration>
+                                        <connections>
+                                            <action selector="selectImageButtonTapped:" destination="fc2-lP-xh9" eventType="touchUpInside" id="yKe-dh-4E4"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="7c7-2e-rLr"/>
                         <color key="backgroundColor" red="0.2499961342" green="0.4452520941" blue="0.27562342569999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="Qgj-kd-0BS" firstAttribute="top" secondItem="8dQ-Eb-H95" secondAttribute="bottom" constant="50" id="11G-jM-5W0"/>
                             <constraint firstItem="7c7-2e-rLr" firstAttribute="trailing" secondItem="Qgj-kd-0BS" secondAttribute="trailing" constant="5" id="1Xg-us-w0d"/>
-                            <constraint firstItem="eRl-17-FtX" firstAttribute="top" secondItem="Qgj-kd-0BS" secondAttribute="bottom" constant="112" id="3Rq-Sy-Tj8"/>
-                            <constraint firstItem="eRl-17-FtX" firstAttribute="leading" secondItem="7c7-2e-rLr" secondAttribute="leading" constant="53" id="Aaa-Se-O8J"/>
+                            <constraint firstItem="Qgj-kd-0BS" firstAttribute="top" secondItem="YRQ-R3-cth" secondAttribute="top" constant="132" id="4z0-tf-AcQ"/>
+                            <constraint firstItem="7c7-2e-rLr" firstAttribute="trailing" secondItem="gy4-LB-vL6" secondAttribute="trailing" constant="55" id="8Yx-us-szX"/>
                             <constraint firstItem="8dQ-Eb-H95" firstAttribute="top" secondItem="7c7-2e-rLr" secondAttribute="top" id="CNz-2C-iF4"/>
                             <constraint firstItem="u14-Xw-sR6" firstAttribute="centerX" secondItem="7c7-2e-rLr" secondAttribute="centerX" id="Cie-JA-1Wl"/>
-                            <constraint firstItem="7c7-2e-rLr" firstAttribute="bottom" secondItem="eRl-17-FtX" secondAttribute="bottom" constant="165" id="GCg-cv-0zZ"/>
-                            <constraint firstItem="7c7-2e-rLr" firstAttribute="trailing" secondItem="eRl-17-FtX" secondAttribute="trailing" constant="268" id="XPY-3z-VxR"/>
+                            <constraint firstItem="gy4-LB-vL6" firstAttribute="top" secondItem="Qgj-kd-0BS" secondAttribute="bottom" constant="112" id="MFR-FO-0bp"/>
                             <constraint firstItem="Qgj-kd-0BS" firstAttribute="leading" secondItem="7c7-2e-rLr" secondAttribute="leading" constant="5" id="Zm5-Rr-NgW"/>
-                            <constraint firstItem="7c7-2e-rLr" firstAttribute="bottom" secondItem="u14-Xw-sR6" secondAttribute="bottom" constant="80" id="fwW-rW-FON"/>
+                            <constraint firstItem="7c7-2e-rLr" firstAttribute="bottom" secondItem="u14-Xw-sR6" secondAttribute="bottom" constant="40" id="fwW-rW-FON"/>
+                            <constraint firstItem="gy4-LB-vL6" firstAttribute="leading" secondItem="7c7-2e-rLr" secondAttribute="leading" constant="55" id="jXe-Yd-uZL"/>
                             <constraint firstItem="8dQ-Eb-H95" firstAttribute="leading" secondItem="7c7-2e-rLr" secondAttribute="leading" constant="29" id="xcn-rc-M7z"/>
                         </constraints>
                     </view>
@@ -73,8 +95,10 @@
                     <connections>
                         <outlet property="cameraButton" destination="u14-Xw-sR6" id="b3H-Cx-L6m"/>
                         <outlet property="cameraRollButton" destination="eRl-17-FtX" id="EUK-me-j6M"/>
+                        <outlet property="cameraRollPreview" destination="Qgj-kd-0BS" id="XfI-DR-jqU"/>
                         <outlet property="cancelButton" destination="8dQ-Eb-H95" id="G9y-Rx-yO1"/>
                         <outlet property="capturedImage" destination="Qgj-kd-0BS" id="YD1-TK-77K"/>
+                        <outlet property="selectImageButton" destination="xOu-hI-vAz" id="rKl-0U-Lhz"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uuD-Sm-sau" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -85,5 +109,6 @@
     <resources>
         <image name="camera.circle.fill" catalog="system" width="128" height="123"/>
         <image name="photo.on.rectangle.angled" catalog="system" width="128" height="98"/>
+        <image name="tray.and.arrow.down.fill" catalog="system" width="128" height="115"/>
     </resources>
 </document>
